<resources>
    <string name="app_name">Age Calculator</string>
    <string name="Change_Theme">Change Theme</string>
    <string name="about_app">About</string>
    <string name="rate_app">Rate this App</string>
    <string name="prefs_theme_key">theme</string>
    <string name="privacy">Privacy Policy</string>
    <string name="zero">00</string>
    <string name="more_app">More Apps</string>
    <string name="share">Share this App</string>
</resources>
