<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/acti_theme"
        android:icon="@drawable/baseline_palette_white_48"
        app:showAsAction="ifRoom"
        android:title="@string/Change_Theme" />

    <item
        android:id="@+id/aboutApp"
        app:showAsAction="ifRoom"
        android:title="@string/about_app" />
    <item
        android:id="@+id/rateApp"
        android:title="@string/rate_app" />
    <item
        android:id="@+id/shareApp"
        android:title="@string/share"/>
    <item
        android:id="@+id/privacy"
        android:title="@string/privacy" />
    <item
        android:id="@+id/moreApp"
        android:title="@string/more_app"/>
</menu>